@@ -209,11 +209,12 @@ namespace MySql.Data.MySqlClient.Tests
 		public void GetSchema() 
 		{
 			string sql = "CREATE TABLE test2(id INT UNSIGNED AUTO_INCREMENT " +
-                "NOT NULL, name VARCHAR(255) NOT NULL, PRIMARY KEY(id))";
+                "NOT NULL, name VARCHAR(255) NOT NULL, name2 VARCHAR(40), fl FLOAT, " +
+                "dt DATETIME, PRIMARY KEY(id))";
 
 			execSQL("DROP TABLE IF EXISTS test2");
 			execSQL(sql);
-			execSQL("INSERT INTO test2 VALUES(1,'Test')");
+			execSQL("INSERT INTO test2 VALUES(1,'Test', 'Test', 1.0, now())");
 
 			MySqlDataReader reader = null;
 
@@ -226,7 +227,9 @@ namespace MySql.Data.MySqlClient.Tests
 				Assert.AreEqual(true, dt.Rows[0]["IsUnique"], "Checking IsUnique");
 				Assert.AreEqual(false, dt.Rows[0]["AllowDBNull"], "Checking AllowDBNull");
 				Assert.AreEqual(false, dt.Rows[1]["AllowDBNull"], "Checking AllowDBNull");
-			}
+                Assert.AreEqual(255, dt.Rows[1]["ColumnSize"]);
+                Assert.AreEqual(40, dt.Rows[2]["ColumnSize"]);
+            }
 			catch (Exception ex) 
 			{
 				Assert.Fail(ex.Message);
