@@ -73,6 +73,8 @@ Version 1.0.8  (not yet released)
 	Bug #16884 Invalid DateTime Values from DataReader     
 	Bug #7248  There is already an open DataReader associated with this Connection which must 
 	Bug #22400 Nested transactions     
+	Bug #11991 ExecuteScalar 	
+	Bug #14592 Wrong column length returned for VARCHAR UTF8 columns 
 	
 Version 1.0.7
 
